--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A* Pathfinding</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
+    
 </head>
 <body>
+    <h1 id = 'title'>A* Pathfinding in JavaScript</h1>
+
+        <p id = 'dimension'>10 x 10 grid</p>
+        <input type="range" min="5" max="50" value="10" id="slider">
+        <div id="menu-bar">
+        <p id="start-cell" class = 'menu-item'>Select Start Cell</p>
+        <p id="target-cell" class = 'menu-item'>Select Target Cell</p>
+    </div>
 </body>
 </html>
