--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
     <h1 id = 'title'>A* Pathfinding in JavaScript</h1>
 
-        <p id = 'dimension'>10 x 10 grid</p>
-        <input type="range" min="5" max="50" value="10" id="slider">
-        <div id="menu-bar">
-        <p id="start-cell" class = 'menu-item'>Select Start Cell</p>
-        <p id="target-cell" class = 'menu-item'>Select Target Cell</p>
+    <p id = 'dimension'>10 x 10 grid</p>
+    <input type="range" min="5" max="50" value="10" id="slider">
+    <div id="buttons">
+        <p id="start-button" class = 'unselected'>Select Start Cell</p>
+        <p id="target-button" class = 'unselected'>Select Target Cell</p>
     </div>
 </body>
 </html>
