--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,18 +9,32 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Ubuntu:wght@300;400&display=swap"
+        rel="stylesheet">
     <script src="script.js" defer></script>
-    
-</head>
-<body>
-    <h1 id = 'title'>A* Pathfinding in JavaScript</h1>
 
-    <p id = 'dimension'>10 x 10 grid</p>
-    <input type="range" min="5" max="50" value="10" id="slider">
+</head>
+
+<body>
+    <h1 id='title'>A* Pathfinding in JavaScript</h1>
+
+    <div id='dimension-area' class='slider-area'>
+        <p id='dimension' class='slider-text'>10 x 10 grid</p>
+        <input type="range" min="5" max="50" value="10" id="dim-slider">
+    </div>
+
+    <div id='wall-area' class='slider-area'>
+        <p id='probability' class='slider-text'>30% wall probability</p>
+        <input type='range' min='0' max='100' value='30' id="wall-slider">
+    </div>
+
+    <div id ='generate'>Generate!</div>
+
     <div id="buttons">
-        <p id="start-button" class = 'unselected'>Select Start Cell</p>
-        <p id="target-button" class = 'unselected'>Select Target Cell</p>
+        <p id="start-button" class='unselected'>Select Start Cell</p>
+        <p id="target-button" class='unselected'>Select Target Cell</p>
     </div>
 </body>
+
 </html>
