--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
     <div id ='generate'>Generate!</div>
 
+    <div id = 'pathfind'>Find a path!</div>
+
     <div id="buttons">
         <p id="start-button" class='unselected'>Select Start Cell</p>
         <p id="target-button" class='unselected'>Select Target Cell</p>
